restructuring for fast api

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
-./env/
-/env/
-/env
-./env
-./__pycache__/
-/__pycache__/
-__pycache__
-./data.csv
-data.csv
-__pycache__/
-./games.csv
-games.csv
-./chess_model/
-/chess_model/
-./chess_model
-chess_model/
-chess_model
+.venv/
+**/__pycache__/
+src/model/chess_model/*
+src/model/pgn/*
+src/model/data/*
+**/data.csv
+**/games.csv
