--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,44 @@
-./env/
-/env/
-/env
-./env
-./__pycache__/
-/__pycache__/
-__pycache__
-./data.csv
-data.csv
-__pycache__/
-./games.csv
-games.csv
-./chess_model/
-/chess_model/
-./chess_model
-chess_model/
-chess_model
+.venv/
+**/__pycache__/
+src/model/chess_model/*
+
+Chess_Model/src/model/data/games.csv
+src/model/data/data.csv
+**/EndgameTbl/**
+src/model/data/self_play.pgn
+src/model/chess_modelmodel.h5
+src/model/chess_model/model.h5
+terraform/.terraform.lock.hcl
+terraform/.terraform/
+terraform/secret.json
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+terraform/secret.tfvars
+src/model/data/scaler.joblib
+src/model/data/copy_data.csv
+src/model/data/data copy.csv
+src/model/data/validation.csv
+src/model/data/training.csv
+src/model/data/testing.csv
+**secret.json**
+src/model/data/*
+src/model/data/**
+**/.terraform/*
+
+
+*.tfstate
+*.tfstate.*
+
+
+crash.log
+crash.*.log
+
+*.tfvars
+*.tfvars.json
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+.terraformrc
+terraform.rc
