--- a/.dockerignore
+++ b/.dockerignore
@@ -2,6 +2,8 @@
 .venv/
 **/__pycache__/
 **/.pytest_cache/
-src/model/chess_modelmodel.h5
-Chess_Model/src/model/chess_model
-Chess_Model/terraform/secret.json
+
+terraform/
+deployment.yaml
+src/model/data/*
+!src/model/data/EndgameTbl
