--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ src/model/data/testing.csv
 src/model/data/*
 src/model/data/**
 **/.terraform/*
-
+terraform/tf.log
 src/model/data/gameData.db
 src/model/data/gameData.db-journal
 *.tfstate
